syntax = "proto3";
package auth;

service Auth {
    // ZKP Authentication Routes
    rpc SignUp (SignUpRequest) returns (SignUpResponse);
    rpc Commit (CommitRequest) returns (CommitResponse);
    rpc Authenticate (AuthRequest) returns (AuthResponse);

    // Protected Routes
    rpc GetPrice (GetPriceRequest) returns (GetPriceResponse);
}

message ProtoGroup {
    bytes p = 1;
    bytes q = 2;
    bytes alpha = 3;
    bytes beta = 4;
}

message Signature {
    ProtoGroup group = 1;
    bytes y1 = 2;
    bytes y2 = 3;
}

message SignUpRequest {
    string username = 1;
    Signature signature = 2;
}

message SignUpResponse {}

message Commitment {
    bytes r1 = 1;
    bytes r2 = 2;
}

message CommitRequest {
    string username = 1;
    Commitment commitment = 2;
}

message Challenge {
    bytes c = 1;
}

message CommitResponse {
    string verifier_id = 1;
    Challenge challenge = 2;
}

message Solution {
    bytes s = 1;
}

message AuthRequest {
    string verifier_id = 1;
    Solution solution = 2;
}

message AuthResponse {
    string session_id = 1;
}

message GetPriceRequest {
    string session_id = 1;
    string symbol = 2;
}

message GetPriceResponse {
    string symbol = 1;
    string price = 2;
}